fixed another duplicate mis-spelled ingredient
another minor name fix

--- a/sports-anti-chafing-product-analysis.Rmd
+++ b/sports-anti-chafing-product-analysis.Rmd
@@ -95,6 +95,17 @@ dfTopTenIngredients <- dfTopTenIngredients[order(-dfTopTenIngredients$Product_Co
 head(dfTopTenIngredients,10)  # Display top 10
 ```
 
+Lets look at the total number of different ingredients used, the products with the most and least number of ingredients, and the overall average number of ingredients used with all products.
+
+```{r}
+# The total lnumber of ingredients is the number of rows from the 
+# dfIngredientDefs table which has all the ingredients listed
+# We could add more later, so not hard coding the values is best...
+echo("The total number of ingredients in " nrow(dfProcuct)," products is: ",nrow(dfIngredientDefs))
+
+```
+
+
 
 *Note: This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>*
      
